[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stupidlogger"
description = "Use `error`, `warn`, `info`, `debug`, `log` like you use `print`"
version = "1.0.0"
authors = [
  { name="A Simple Author", email="author@example.com" },
]
description = "A simple Python logger, intuitive to use."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colored>=2.2.0",
    "colorama>=0.2.0"
]
requires-python = ">=3.10"